message Request {

    extensions 1000 to max;
    enum Type {
        FILE_INFO = 0;
        GET_FILE_INFO = 1;
        GET_CHUNK = 2;
    }
    required Type type = 1;

}

message GetChunk {
    extend Request {
        optional GetChunk request = 1000;
    }

    required string UUID = 1;
    required int64 chunk = 2;
}

message GetFileInfo {
    extend Request {
        optional GetFileInfo request = 1001;
    }

    required string UUID = 1;
}
